--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="footer-col">
                 <h4>Comunidade</h4>
                 <ul>
-                    <li><a href="./filmes.html">Blog</a></li>
+                    <li><a href="./pages/filmes.html">Blog</a></li>
                     <li><a href="#">Comunidades</a></li>
                     <li><a href="#">Ideias</a></li>
                 </ul>
@@ -226,9 +226,9 @@
             <div class="footer-col">
                 <h4>Suporte</h4>
                 <ul>
-                    <li><a href="./faq.html">Ajuda</a></li>
-                    <li><a href="./faq.html">Fale conosco</a></li>
-                    <li><a href="./feedback.html">Status</a></li>
+                    <li><a href="./pages/faq.html">Ajuda</a></li>
+                    <li><a href="./pages/faq.html">Fale conosco</a></li>
+                    <li><a href="./pages/feedback.html">Status</a></li>
                 </ul>
             </div>
             <div class="footer-col">
