--- a/pages/energias.html
+++ b/pages/energias.html
@@ -20,8 +20,8 @@
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href=".estudos.html">Estudos</a></li>
-                    <li><a href=".filmes.html">Filmes</a></li>
+                    <li><a href="./estudos.html">Estudos</a></li>
+                    <li><a href="./filmes.html">Filmes</a></li>
                     <li><a href="../index.html">Home</a></li>
                 </ul>
             </nav>
