arrumando links do feedback

--- a/pages/ecossistema.html
+++ b/pages/ecossistema.html
@@ -179,7 +179,7 @@
     </main>
 
     <div class="feedback-float">
-        <a href="#">
+        <a href="./feedback.html">
             <img src="https://img.icons8.com/ios-filled/50/ffffff/question-mark.png" alt="Ícone de ajuda">
         </a>
         <span>Feedback</span>
@@ -188,7 +188,7 @@
     <footer class="footer">
         <div class="container footer-layout">
             <div class="footer-col">
-                <a href="#" class="logo footer-logo">
+                <a href="../index.html" class="logo footer-logo">
                     <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                     <span>EcoSeed</span>
                 </a>
