--- a/pages/mudancas-climaticas.html
+++ b/pages/mudancas-climaticas.html
@@ -183,7 +183,7 @@
     </main>
     
     <div class="feedback-float">
-        <a href="#">
+        <a href="./feedback.html">
             <img src="https://img.icons8.com/ios-filled/50/ffffff/question-mark.png" alt="Ícone de ajuda">
         </a>
         <span>Feedback</span>
