--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="developer-profile">
                         <img src="./imgs/home/pessoas/kalebe.png" alt="Kelebe Santana">
-                        <p class="dev-name">Kailia Santana</p>
+                        <p class="dev-name">Kelebe Sant'Ana</p>
                         <p class="dev-role">Programadora e Designer</p>
                     </div>
                     <div class="developer-profile">
