--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="developers-grid">
                     <div class="developer-profile">
                         <img src="./imgs/home/pessoas/julya.png" alt="Jullya Karoline">
-                        <p class="dev-name">Jullya Karoline</p>
+                        <p class="dev-name">Julya Karoline</p>
                         <p class="dev-role">Pesquisadora e Designer</p>
                     </div>
                     <div class="developer-profile">
@@ -174,7 +174,7 @@
                     </div>
                     <div class="developer-profile">
                         <img src="./imgs/home/pessoas/isa.png" alt="Isabelly Loenna">
-                        <p class="dev-name">Isabelly Loenna</p>
+                        <p class="dev-name">Isabelli Lucena</p>
                         <p class="dev-role">Programadora</p>
                     </div>
                     <div class="developer-profile">
