--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz Sustentabilidade</title>
   <link rel="stylesheet" href="stylequiz.css">
+  <link rel="icon" href="../imgs/home/logoedu.png" type="image/png">
 </head>
 <body>
   <div class="container">
