ajustes de links

--- a/pages/filmes.html
+++ b/pages/filmes.html
@@ -22,8 +22,8 @@
             </a>
             <nav class="main-nav">
                 <ul>
-                    <li><a href=".estudos.html">Estudos</a></li>
-                    <li><a href=".filmes.html">Filmes</a></li>
+                    <li><a href="estudos.html">Estudos</a></li>
+                    <li><a href="../index.html">Sobre nós</a></li>
                     <li><a href="../index.html">Home</a></li>
                 </ul>
             </nav>
@@ -47,16 +47,16 @@
                     <div class="movie-card">
                         <img src="../imgs/filmes/img1.png" alt="Pôster do filme Em Busca dos Corais">
                         <h4>Em Busca dos Corais</h4>
-                        <a href="https://www.netflix.com/br/title/80168188" class="btn-movie">Análise</a>
+                        <a href="https://www.netflix.com/br/title/80168188" class="btn-movie">Assistir</a>
                     </div>
                     <div class="movie-card">
                         <img src="../imgs/filmes/img2.png" alt="Pôster do filme Cowspiracy">
                         <h4>Cowspiracy</h4>
-                        <a href="https://www.netflix.com/br/title/80033772" class="btn-movie">Resumo</a>
+                        <a href="https://www.netflix.com/br/title/80033772" class="btn-movie">Assistir</a>
                     </div>
                     <div class="movie-card">
                         <img src="../imgs/filmes/img3.png" alt="Pôster do filme O Dilema das Redes">
-                        <h4>O Dilema das Redes</h4>
+                        <h4>O Menino Que Descobriu o Vento</h4>
                         <a href="https://www.netflix.com/br/title/80200047" class="btn-movie">Assistir</a>
                     </div>
                 </div>
@@ -70,17 +70,17 @@
                     <div class="movie-card">
                         <img src="../imgs/filmes/img4.png" alt="Pôster do filme O Segredo das Baleias">
                         <h4>O Segredo das Baleias</h4>
-                        <a href="https://www.disneyplus.com/browse/entity-214a64b8-2468-4d71-a712-172b53e41e90" class="btn-movie">Análise</a>
+                        <a href="https://www.disneyplus.com/browse/entity-214a64b8-2468-4d71-a712-172b53e41e90" class="btn-movie">Assistir</a>
                     </div>
                     <div class="movie-card">
                         <img src="../imgs/filmes/img5.png" alt="Pôster do filme Wall-E">
                         <h4>Wall-E</h4>
-                        <a href="https://www.disneyplus.com/pt-br/browse/entity-280395a4-d5ef-4dd0-bd09-d91c31593d3d" class="btn-movie">Análise</a>
+                        <a href="https://www.disneyplus.com/pt-br/browse/entity-280395a4-d5ef-4dd0-bd09-d91c31593d3d" class="btn-movie">Assistir</a>
                     </div>
                     <div class="movie-card">
                         <img src="../imgs/filmes/img6.png" alt="Pôster do filme Uma Vida Extraordinária">
-                        <h4>Uma Vida Extraordinária</h4>
-                        <a href="https://www.netflix.com/br/title/70129386" class="btn-movie">Análise</a>
+                        <h4>Lixo Extraordinário</h4>
+                        <a href="https://www.netflix.com/br/title/70129386" class="btn-movie">Assistir</a>
                     </div>
                 </div>
             </div>
@@ -92,18 +92,18 @@
                 <div class="movie-grid">
                     <div class="movie-card">
                         <img src="../imgs/filmes/img7.png" alt="Pôster do filme Oceanos de Plástico">
-                        <h4>Oceanos de Plástico</h4>
-                        <a href="disneyplus.com/en-tr/browse/entity-c472832f-a4e8-4bee-8232-404e803b183f" class="btn-movie">Análise</a>
+                        <h4>Planeta dos Macacos</h4>
+                        <a href="disneyplus.com/en-tr/browse/entity-c472832f-a4e8-4bee-8232-404e803b183f" class="btn-movie">Assistir</a>
                     </div>
                     <div class="movie-card">
                         <img src="../imgs/filmes/img8.png" alt="Pôster do filme O Lorax">
                         <h4>O Lorax</h4>
-                        <a href="https://www.netflix.com/br/title/70208102" class="btn-movie">Análise</a>
+                        <a href="https://www.netflix.com/br/title/70208102" class="btn-movie">Assistir</a>
                     </div>
                     <div class="movie-card">
                         <img src="../imgs/filmes/img9.png" alt="Pôster do filme Brave Blue World">
-                        <h4>Brave Blue World</h4>
-                        <a href="https://www.disneyplus.com/pt-br/browse/entity-c255a738-ee7f-4569-ba89-acacb6e5cefb" class="btn-movie">Análise</a>
+                        <h4>Vida de Inseto</h4>
+                        <a href="https://www.disneyplus.com/pt-br/browse/entity-c255a738-ee7f-4569-ba89-acacb6e5cefb" class="btn-movie">Assistir</a>
                     </div>
                 </div>
             </div>
