--- a/pages/estudos.html
+++ b/pages/estudos.html
@@ -23,8 +23,8 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="./estudos.html">Estudos</a></li>
+                    <li><a href="./filmes.html">Filmes</a></li>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="../index.html">Sobre nós</a></li>
                 </ul>
             </nav>
         </div>
