arrumando links internos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lora:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lora:ital@0;1&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
 
     <header class="header">
@@ -56,7 +59,8 @@
                     <div class="objective-card">
                         <img src="./imgs/home/icons/Icon2.png" alt="Mãos segurando broto">
                         <h4>Prática Sustentável</h4>
-                        <p>Incentivamos a aplicação de práticas sustentáveis no seu dia a dia para um futuro mais verde.</p>
+                        <p>Incentivamos a aplicação de práticas sustentáveis no seu dia a dia para um futuro mais verde.
+                        </p>
                     </div>
                     <div class="objective-card">
                         <img src="./imgs/home/icons/Icon3.png" alt="Prédio governamental">
@@ -74,7 +78,8 @@
                 </div>
                 <div class="ecology-text">
                     <h3>O que é Ecologia?</h3>
-                    <p>Ecologia é o estudo científico das interações dos organismos entre si e com o seu ambiente. Ela busca entender como os seres vivos afetam e são afetados pela natureza.</p>
+                    <p>Ecologia é o estudo científico das interações dos organismos entre si e com o seu ambiente. Ela
+                        busca entender como os seres vivos afetam e são afetados pela natureza.</p>
                     <a href="./pages/estudos.html" class="btn btn-secondary">Saiba mais</a>
                 </div>
             </div>
@@ -124,19 +129,19 @@
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('./imgs/home/lixo.png');">
-                         <div class="card-overlay">
+                        <div class="card-overlay">
                             <h4>Reciclagem</h4>
                             <a href="./pages/reciclagem.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('./imgs/home/energiaeolica.png');">
-                         <div class="card-overlay">
+                        <div class="card-overlay">
                             <h4>Sustentabilidade</h4>
                             <a href="./pages/energias.html" class="btn btn-tertiary">Acessar</a>
                         </div>
                     </div>
                     <div class="content-card" style="background-image: url('./imgs/home/floresta.png');">
-                         <div class="card-overlay">
+                        <div class="card-overlay">
                             <h4>Ecossistema</h4>
                             <a href="./pages/ecossistema.html" class="btn btn-tertiary">Acessar</a>
                         </div>
@@ -199,7 +204,7 @@
         </section>
 
     </main>
-    
+
     <div class="feedback-float">
         <a href="./pages/feedback.html">
             <img src="https://img.icons8.com/ios-filled/50/ffffff/question-mark.png" alt="Ícone de ajuda">
@@ -215,29 +220,20 @@
                     <span>EcoSeed</span>
                 </a>
             </div>
-            <div class="footer-col">
-                <h4>Comunidade</h4>
-                <ul>
-                    <li><a href="./pages/filmes.html">Blog</a></li>
-                    <li><a href="#">Comunidades</a></li>
-                    <li><a href="#">Ideias</a></li>
-                </ul>
-            </div>
+
             <div class="footer-col">
                 <h4>Suporte</h4>
                 <ul>
                     <li><a href="./pages/faq.html">Ajuda</a></li>
-                    <li><a href="./pages/faq.html">Fale conosco</a></li>
-                    <li><a href="./pages/feedback.html">Status</a></li>
+                    <li><a href="./pages/feedback.html">Fale conosco</a></li>
+                    <li><a href="./pages/faq.html">Status</a></li>
                 </ul>
             </div>
             <div class="footer-col">
-                <h4>Conecte-se conosco</h4>
-                <div class="social-icons">
-                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/twitter--v1.png" alt="Twitter"></a>
-                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png" alt="Facebook"></a>
-                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="Instagram"></a>
-                </div>
+                <h4>Comunidade</h4>
+                <ul>
+                    <li><a href="./pages/filmes.html">Blog</a></li>
+                </ul>
             </div>
         </div>
         <div class="footer-bottom">
@@ -247,4 +243,5 @@
 
     <script src="main.js"></script>
 </body>
+
 </html>
