--- a/pages/reciclagem.html
+++ b/pages/reciclagem.html
@@ -146,33 +146,24 @@
         <div class="container footer-layout">
             <div class="footer-col">
                 <a href="#" class="logo footer-logo">
-                    <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
+                    <img src="./imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                     <span>EcoSeed</span>
                 </a>
+            </div>
+
+            <div class="footer-col">
+                <h4>Suporte</h4>
+                <ul>
+                    <li><a href="./pages/faq.html">Ajuda</a></li>
+                    <li><a href="./pages/feedback.html">Fale conosco</a></li>
+                    <li><a href="./pages/faq.html">Status</a></li>
+                </ul>
             </div>
             <div class="footer-col">
                 <h4>Comunidade</h4>
                 <ul>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Comunidades</a></li>
-                    <li><a href="#">Ideias</a></li>
+                    <li><a href="./pages/filmes.html">Blog</a></li>
                 </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Suporte</h4>
-                <ul>
-                    <li><a href="#">Ajuda</a></li>
-                    <li><a href="#">Fale conosco</a></li>
-                    <li><a href="#">Status</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Conecte-se conosco</h4>
-                <div class="social-icons">
-                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/twitter--v1.png" alt="Twitter"></a>
-                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/facebook-new.png" alt="Facebook"></a>
-                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png" alt="Instagram"></a>
-                </div>
             </div>
         </div>
         <div class="footer-bottom">
@@ -182,4 +173,5 @@
 
     <script src="main.js"></script>
 </body>
+
 </html>
