--- a/pages/faq.html
+++ b/pages/faq.html
@@ -98,33 +98,33 @@
     <footer class="footer">
         <div class="container footer-layout">
             <div class="footer-col">
-                <a href="../index.html" class="logo footer-logo">
-                    <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
+                <a href="#" class="logo footer-logo">
+                    <img src="./imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                     <span>EcoSeed</span>
                 </a>
-                 <div class="footer-bottom-text">
-                    <p>EcoSeed, sediada em São Paulo - SP. Todos os direitos reservados.</p>
-                 </div>
+            </div>
+
+            <div class="footer-col">
+                <h4>Suporte</h4>
+                <ul>
+                    <li><a href="./pages/faq.html">Ajuda</a></li>
+                    <li><a href="./pages/feedback.html">Fale conosco</a></li>
+                    <li><a href="./pages/faq.html">Status</a></li>
+                </ul>
             </div>
             <div class="footer-col">
                 <h4>Comunidade</h4>
                 <ul>
-                    <li><a href="./filmes.html">Blog</a></li>
-                    <li><a href="#">Comunidades</a></li>
-                    <li><a href="#">Ideias</a></li>
+                    <li><a href="./pages/filmes.html">Blog</a></li>
                 </ul>
             </div>
-            <div class="footer-col">
-                <h4>Suporte</h4>
-                <ul>
-                    <li><a href="./faq.html">Ajuda</a></li>
-                    <li><a href="./faq.html">Fale conosco</a></li>
-                    <li><a href="./feedback.html">Status</a></li>
-                </ul>
-            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 EcoSeed. Todos os direitos reservados.</p>
         </div>
     </footer>
 
     <script src="faq.js"></script>
 </body>
+
 </html>
