--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -60,35 +60,33 @@
     <footer class="footer">
         <div class="container footer-layout">
             <div class="footer-col">
-                <a href="../index.html" class="logo footer-logo">
-                    <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
+                <a href="#" class="logo footer-logo">
+                    <img src="./imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                     <span>EcoSeed</span>
                 </a>
+            </div>
+
+            <div class="footer-col">
+                <h4>Suporte</h4>
+                <ul>
+                    <li><a href="./pages/faq.html">Ajuda</a></li>
+                    <li><a href="./pages/feedback.html">Fale conosco</a></li>
+                    <li><a href="./pages/faq.html">Status</a></li>
+                </ul>
             </div>
             <div class="footer-col">
                 <h4>Comunidade</h4>
                 <ul>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Ideias</a></li>
+                    <li><a href="./pages/filmes.html">Blog</a></li>
                 </ul>
             </div>
-            <div class="footer-col">
-                <h4>Suporte</h4>
-                <ul>
-                    <li><a href="#">Ajuda</a></li>
-                    <li><a href="feedback.html">Fale conosco</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Mantenha-se atualizado</h4>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Seu email">
-                    <button type="submit">→</button>
-                </form>
-            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 EcoSeed. Todos os direitos reservados.</p>
         </div>
     </footer>
 
     <script src="quiz.js"></script>
 </body>
+
 </html>
