--- a/pages/energias.html
+++ b/pages/energias.html
@@ -152,7 +152,7 @@
         <div class="container footer-layout">
             <div class="footer-col">
                 <a href="#" class="logo footer-logo">
-                    <img src="./imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
+                    <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                     <span>EcoSeed</span>
                 </a>
             </div>
@@ -160,15 +160,15 @@
             <div class="footer-col">
                 <h4>Suporte</h4>
                 <ul>
-                    <li><a href="./pages/faq.html">Ajuda</a></li>
-                    <li><a href="./pages/feedback.html">Fale conosco</a></li>
-                    <li><a href="./pages/faq.html">Status</a></li>
+                    <li><a href="./faq.html">Ajuda</a></li>
+                    <li><a href="./feedback.html">Fale conosco</a></li>
+                    <li><a href="./faq.html">Status</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Comunidade</h4>
                 <ul>
-                    <li><a href="./pages/filmes.html">Blog</a></li>
+                    <li><a href="./filmes.html">Blog</a></li>
                 </ul>
             </div>
         </div>
@@ -177,7 +177,7 @@
         </div>
     </footer>
 
-    <script src="energias.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
