--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -25,9 +25,9 @@
             </a>
             <nav class="main-nav">
                 <ul>
+                    <li><a href="./estudos.html">Estudos</a></li>
+                    <li><a href="./filmes.html">Filmes</a></li>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">Eventos</a></li>
-                    <li><a href="../index.html">Sobre nós</a></li>
                 </ul>
             </nav>
         </div>
@@ -66,7 +66,7 @@
         <div class="container footer-layout">
             <div class="footer-col">
                 <a href="#" class="logo footer-logo">
-                    <img src="./imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
+                    <img src="../imgs/home/logoedu.png" alt="Folha Branca" class="logo-icon">
                     <span>EcoSeed</span>
                 </a>
             </div>
@@ -74,15 +74,15 @@
             <div class="footer-col">
                 <h4>Suporte</h4>
                 <ul>
-                    <li><a href="./pages/faq.html">Ajuda</a></li>
-                    <li><a href="./pages/feedback.html">Fale conosco</a></li>
-                    <li><a href="./pages/faq.html">Status</a></li>
+                    <li><a href="./faq.html">Ajuda</a></li>
+                    <li><a href="./feedback.html">Fale conosco</a></li>
+                    <li><a href="./faq.html">Status</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Comunidade</h4>
                 <ul>
-                    <li><a href="./pages/filmes.html">Blog</a></li>
+                    <li><a href="./filmes.html">Blog</a></li>
                 </ul>
             </div>
         </div>
