--- a/pages/ecossistema.html
+++ b/pages/ecossistema.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <header class="header">
+    <header class="header header-transparent">
         <div class="container">
             <a href="../index.html" class="logo">
                 <img src="../imgs/home/logoedu.png" alt="Folha Verde" class="logo-icon">
