--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -6,36 +6,11 @@
     <title>Cadastro - EcoSeed</title>
     <link rel="icon" href="../imgs/home/logoedu.png" type="image/png">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./stylecadastro.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     
-    <style>
-        .auth-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 80vh;
-            background-color: var(--light-gray);
-        }
-        .auth-card {
-            background: white;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-        }
-        .auth-card h2 { color: var(--primary-green); margin-bottom: 20px; }
-        .form-group { margin-bottom: 15px; text-align: left; }
-        .form-group label { display: block; margin-bottom: 5px; font-weight: 600; }
-        .form-group input { 
-            width: 100%; padding: 10px; 
-            border: 1px solid #ddd; border-radius: 5px; 
-        }
-        .auth-link { margin-top: 20px; display: block; color: var(--medium-gray); }
-        .auth-link a { color: var(--primary-green); font-weight: bold; text-decoration: none; }
-    </style>
+    
 </head>
 <body>
     <header class="header">
